# ucrypt

./: CMakeLists.txt  LICENSE  README.md
include/ucrypt/: ucrypt.h
src/: ucrypt.cpp
test/: test_main.cpp
